--- a/client/package.json
+++ b/client/package.json
@@ -36,5 +36,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://auth-assignment-bje2yome5-rishabh-mishras-projects-c49412f3.vercel.app"
 }
